# boppop

./: ..env.swp  .env.example  .env.local  .gitignore  Gemfile  README.md  docker-compose.yml  gunicorn_config.py  manage.py  package-lock.json  package.json  requirements.txt  start.sh  test.py
.github/workflows/: cd.yml  ci.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  requirements.txt
api/alembic/: env.py
api/boppop/: admin.py  settings.py  wsgi.py
api/cli/: manage.py
api/core/: __init__.py  auth.py  celery.py  events.py  health.py  redis.py  security.py  user_utils.py  users.py
api/db/: session.py
api/graph/: __init__.py  schema.py  utils.py
api/models/: __init__.py  artist.py  base.py  playlist_songs.py  song.py  user.py
api/scripts/: entrypoint.sh  generate_migration.py  seed.py  start.sh
api/tasks/: challenge_tasks.py
api/tests/: test_health.py
api2/: Dockerfile  README.md  __init__.py  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api2/alembic/: env.py  script.py.mako
api2/app/: main.py
api2/app/core/: security.py
api2/app/routers/: auth.py
api2/cli/: __init__.py
api2/cli/commands/: challenge.py
api2/core/: auth.py  config.py  health.py  redis.py  security.py  users.py
api2/db/: session.py
api2/graph/: __init__.py  context.py
api2/graph/inputs/: __init__.py  review.py  song.py  validators.py
api2/graph/mutations/: __init__.py  artist.py  playlist.py  song.py  vote.py
api2/graph/resolvers/: __init__.py  artist.py  auth.py  playlist.py  song.py
api2/graph/schema/: __init__.py  queries.py
api2/graph/types/: __init__.py  artist.py  pagination.py  playlist.py  review.py  song.py  vote.py
api2/graphql/: inputs.py  mutations.py  schema.py  types.py
api2/middleware/: context.py
api2/models/: __init__.py  artist.py  base.py  playlist.py  review.py  song.py  user.py  vote.py
api2/routers/: auth.py
api2/schemas/: auth.py  graphql.py  utils.py
api2/scripts/: dev.sh  entrypoint.sh  format.sh  init.sql  prod.sh  seed.py
api2/tasks/: challenge_tasks.py
api2/tests/: test_health.py
app/: .env.example  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  server.js  server.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  types.ts
app/components/: About.tsx  Archive.tsx  ArtistCard.tsx  ArtistList.tsx  ArtistPage.tsx  AuthModals.tsx  AuthProvider.tsx  Banner.tsx  Challenge.tsx  ChallengeLink.tsx  ChallengeList.tsx  Container.tsx  Contest.tsx  Countdown.tsx  ErrorBoundary.tsx  Footer.tsx  Layout.tsx  Login.tsx  LoginAvatar.tsx  Navbar.tsx  Playhead.tsx  (+11 more)
boppop/: asgi.py  authentication.py  models.py  settings.py  urls.py  views.py
client/: package-lock.json  package.json
config/: application.rb  credentials.yml.enc  routes.rb  schedule.rb  storage.yml
db/: schema.rb  seeds.rb
nginx/: Dockerfile  nginx.conf
public/: 360_F_346839683_6nAPzbhpSkIpb8pmAwufkC7c5eD7wYws.jpg:Zone.Identifier  asset-manifest.json  index.html  precache-manifest.cdc3cfa5e7c8e0e0243ac04c7cb44e26.js  service-worker.js
scripts/: init-db.sh
trash/: Dockerfile  README.md  get-pip.py  views.py  wait-for-db.sh
(+201 files in other folders)
