[tool.poetry]
name = "boppop-api"
version = "0.1.0"
description = "Bop Pop FastAPI Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = { extras = ["standard"], version = "0.24.0" }
sqlalchemy = "2.0.23"
psycopg2-binary = "2.9.9"
python-jose = { extras = ["cryptography"], version = "3.3.0" }
passlib = { extras = ["bcrypt"], version = "1.7.4" }
python-multipart = "0.0.5"
python-dotenv = "1.0.0"
alembic = "1.12.1"
strawberry-graphql = { extras = ["fastapi"], version = "0.158.0" }
pydantic = { extras = ["email"], version = "2.4.2" }
pydantic-settings = "2.0.3"
redis = { extras = ["hiredis"], version = "5.0.1" }
requests = "2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
httpx = "0.25.1"
black = "23.10.1"
isort = "5.12.0"
flake8 = "6.1.0"
mypy = "1.6.1"
pre-commit = "3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
