[tool.poetry]
name = "boppop_api"
version = "0.1.0"
description = "Bop Pop API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
strawberry-graphql = {extras = ["fastapi"], version = "0.257.0"}
uvicorn = {version = "^0.24.0", extras = ["standard"]}
sqlalchemy = {version = "^2.0.23", extras = ["asyncio"]}
psycopg2-binary = "^2.9.9"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.20"
python-dotenv = "^1.0.0"
alembic = "^1.12.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
redis = {extras = ["hiredis"], version = "^5.0.1"}
requests = "^2.31.0"
fastapi-users = {version = "^14.0.1", extras = ["sqlalchemy"]}
asyncpg = "^0.30.0"
click = "^8.1.8"
pytz = "^2025.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
boppop = "cli.manage:cli"
